--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -3,7 +3,7 @@
     <uk.co.senab.photoview.PhotoView
         android:id="@+id/photo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:layout_margin="@dimen/photo_margin"
         android:contentDescription="@string/app_name" />
@@ -17,4 +17,5 @@
         android:text="@string/error_message"
         android:layout_centerInParent="true"
         />
+
 </merge>
