--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,21 +1,35 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/photo_cardview_height"
+    android:layout_gravity="center"
+    android:layout_margin="30dp"
+    android:gravity="center"
+    app:cardBackgroundColor="@color/grey"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="4sp">
 
-    <uk.co.senab.photoview.PhotoView
-        android:id="@+id/photo"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/photo_margin"
-        android:contentDescription="@string/app_name" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/error_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_red_light"
-        android:visibility="gone"
-        android:text="@string/error_message"
-        android:layout_centerInParent="true"
-        />
+        <uk.co.senab.photoview.PhotoView
+            android:id="@+id/photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/photo_margin"
+            android:contentDescription="@string/app_name" />
 
-</merge>
+        <TextView
+            android:id="@+id/error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/error_message"
+            android:textColor="@android:color/holo_red_light"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
