--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,34 +1,109 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/photo_cardview_height"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="30dp"
     android:gravity="center"
-    app:cardBackgroundColor="@color/grey"
+    app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="4dp"
-    app:cardElevation="4sp">
+    app:cardElevation="12sp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <uk.co.senab.photoview.PhotoView
-            android:id="@+id/photo"
+            android:id="@+id/photo_src"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/photo_height"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/photo_margin"
             android:contentDescription="@string/app_name" />
 
         <TextView
             android:id="@+id/error_message"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/photo_height"
             android:layout_centerInParent="true"
             android:text="@string/error_message"
             android:textColor="@android:color/holo_red_light"
             android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/photo_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:layout_below="@id/photo_src"
+            android:textColor="@color/grey" />
+
+        <View
+            android:id="@+id/fab_space"
+            android:layout_width="1dp"
+            android:layout_height="245dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/photo_plus_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="12dp"
+            android:layout_below="@id/fab_space"
+            app:fabSize="mini"
+            app:elevation="4dp"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/photo_save_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add"
+            android:layout_alignRight="@id/photo_plus_fab"
+            android:layout_alignBottom="@id/photo_plus_fab"
+            android:layout_marginRight="95dp"
+            app:fabSize="mini"
+            app:elevation="4dp"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/photo_fullscreen_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add"
+            android:layout_above="@id/photo_save_fab"
+            android:layout_alignRight="@id/photo_plus_fab"
+            android:layout_alignBottom="@id/photo_plus_fab"
+            android:layout_marginRight="82dp"
+            android:layout_marginBottom="46dp"
+            app:fabSize="mini"
+            app:elevation="4dp"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/photo_share_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add"
+            android:layout_alignBottom="@id/photo_plus_fab"
+            android:layout_marginBottom="95dp"
+            android:layout_alignRight="@id/photo_plus_fab"
+            app:fabSize="mini"
+            app:elevation="4dp"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/photo_desktop_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add"
+            android:layout_alignRight="@id/photo_plus_fab"
+            android:layout_alignBottom="@id/photo_plus_fab"
+            android:layout_marginRight="46dp"
+            android:layout_marginBottom="82dp"
+            app:fabSize="mini"
+            app:elevation="4dp"
+            />
 
     </RelativeLayout>
 
