--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,3 +1,5 @@
 <resources>
-    <color name="grey">#444444</color>
+    <color name="grey">#787878</color>
+    <color name="midnight_blue">#10153d</color>
+    <color name="classic_blue">#0d3196</color>
 </resources>
