--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
         <!-- colorAccent is used as the default value for colorControlActivated
              which is used to tint widgets -->
-        <item name="colorAccent">@android:color/transparent</item>
+        <item name="colorAccent">@color/classic_blue</item>
     </style>
 
 </resources>
