--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/photo_height"
             android:layout_gravity="center"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="@android:color/black"
             android:contentDescription="@string/app_name" />
 
         <TextView
