--- a/app/src/main/res/layout/item_photos_list.xml
+++ b/app/src/main/res/layout/item_photos_list.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/photos_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blue_darker" />
+        android:background="@color/blue_darker"
+        android:clipToPadding="false" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
