--- a/app/src/main/res/layout/item_photos_list.xml
+++ b/app/src/main/res/layout/item_photos_list.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/photo_refresh"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/photos_recycler_view"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/photo_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/blue_darker"
-        android:clipToPadding="false" />
+        android:layout_height="match_parent">
 
-</android.support.v4.widget.SwipeRefreshLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/photos_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/blue_darker"
+            android:clipToPadding="false" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <TextView
+        android:id="@+id/no_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/no_favorite"
+        android:textColor="@android:color/white"
+        android:visibility="gone"
+        android:textSize="14sp" />
+
+</merge>
